--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "repository": "https://github.com/Destiny-01/ICP-storychain",
   "author": "Destiny Aigbe <aigbedestinyic@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "concurrently": "^8.2.1"
+  },
   "scripts": {
-    "dev": "cd frontend && yarn dev"
+    "dev:client": "cd frontend && yarn dev",
+    "dev:server": "cd backend && yarn dev",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\""
   }
 }
