--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,13 @@
   "author": "Destiny-01",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ic0": "^0.2.8",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
